[sync] Properly estimate EntryKernel memory usage.

BUG=705137

Review-Url: https://codereview.chromium.org/2837513002
Cr-Commit-Position: refs/heads/master@{#466411}

Former-commit-id: 9740714c369114929625061c17be977df4fac810